--- a/app/assets/stylesheets/services.css.scss
+++ b/app/assets/stylesheets/services.css.scss
@@ -15,12 +15,18 @@ ul#services {
     position: relative;
 
     background: image-url('services/lighting_design.jpg');
-    height: 460px;
+
+
+    .inner {
+
+      border: 1px solid $blue;
+      height: 460px;
+    }
 
     .title, .description {
       position: absolute;
-//      width: 100%;
-width: 140px;
+      //      width: 100%;
+      width: 138px;
       padding: 10px;
       background: rgba(0,0,0,0.7);
       color: #FFF;
@@ -32,7 +38,7 @@ width: 140px;
     }
 
     .description {
-      bottom: 0;
+      bottom: 1px;
       font-size: 1em;
 
     }
