--- a/app/assets/stylesheets/downloads.css.scss
+++ b/app/assets/stylesheets/downloads.css.scss
@@ -1,6 +1,7 @@
 body#c-downloads-a-index {
 .date_uploaded {
   color: $blue;
+  font-size: .85em;
   }
 
 h3 a {
@@ -24,7 +25,8 @@ li.download {
   .inner {
 //    border: 1px solid $blue;
     padding: 10px;
-    line-height: 130%;
+    line-height: 128%;
+    width: 170px;
 //    height: 140px;
   }
   &:hover {
