--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,7 +26,7 @@
       </div>
 
       <div class="see_more">
-        <%= link_to "Want to see more?", project %>
+        <%= link_to "Want to see more?", projects_path %>
       </div>
 
     </div>
