--- a/app/assets/stylesheets/services.css.scss
+++ b/app/assets/stylesheets/services.css.scss
@@ -2,7 +2,7 @@ ul#services {
   list-style: none;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+    @extend .clearfix;
   clear: both;
   li {
     @include grid(1);
@@ -11,7 +11,7 @@ ul#services {
 //    width: grid-width(2);
 //    float: left;
 //    margin-right: 10px;
-    overflow: hidden;
+    @extend .clearfix;
     position: relative;
 
     background: image-url('services/lighting_design.jpg');
@@ -28,6 +28,7 @@ ul#services {
       //      width: 100%;
       width: 138px;
       padding: 10px;
+      background: image-url('pngs/black_bg.png');
       background: rgba(0,0,0,0.7);
       color: #FFF;
       font-size: 1.2em;
