more ie fixes and can click main window on homepage

--- a/app/assets/stylesheets/boilerplate.css.scss
+++ b/app/assets/stylesheets/boilerplate.css.scss
@@ -51,13 +51,13 @@ body { margin: 0; font-size: 1em; line-height: 1.4; }
    Links
    ========================================================================== */
 
-a { color: #FFF; }
+a { color: #FFF; outline: 0 !important; border: 0; }
 a:hover, a:visited { color: #C2DBFF;}
 //a:hover { color: #06e; }
-a:focus { color: #C2DBFF; outline: thin dotted; }
+a:focus { color: #C2DBFF; outline: 0; }
 
 /* Improve readability when focused and hovered in all browsers: h5bp.com/h */
-a:hover, a:active { outline: 0; }
+a, a:visited, a:focus, a:hover, a:active { outline: 0; border: 0; }
 
 
 /* =============================================================================
