--- a/app/assets/stylesheets/contact.css.scss
+++ b/app/assets/stylesheets/contact.css.scss
@@ -36,7 +36,7 @@
     right: 1px;
     height: 380px;
     padding: 10px;
-    background: image-url('pngs/black_bg.png');
+    background: image-url('pngs/contact_black_bg.png');
     background: rgba(0,0,0,0.8);
     width: 180px;
   }
