--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Urban Lites</title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width">
+<!--  <meta name="viewport" content="width=device-width">-->
+  <meta name="viewport" content="width=940">
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <!--[if IE]>
   <style type="text/css" media="screen">
