--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,9 +34,7 @@
   <header>
     <div class="container">
       <div id="ident" data-url="<%= root_url %>">
-        <div id="logo">
-          <%= image_tag "urban_lites_logo.png", width: 247, height: 46, alt: 'Urban Lites' %>
-        </div>
+        <h2 id="logo">Urban Lites</h2>
         <span id="tag_line">High quality lighting, rigging design and rental services.</span>
       </div>
 
