--- a/app/assets/stylesheets/activity.css.scss
+++ b/app/assets/stylesheets/activity.css.scss
@@ -18,7 +18,7 @@ ul#social_columns > li {
   width: 100%;
   height: 300px;
   background: black image-url('loading.gif') center center no-repeat;
-  iframe { display: none;}
+//  iframe { display: none;}
 }
 
   h2 {
