--- a/app/assets/stylesheets/activity.css.scss
+++ b/app/assets/stylesheets/activity.css.scss
@@ -18,6 +18,7 @@ ul#social_columns > li {
   width: 100%;
   height: 300px;
   background: black image-url('loading.gif') center center no-repeat;
+  margin-bottom: 15px;
 //  iframe { display: none;}
 }
 
