--- a/app/views/admin/services/edit.html.erb
+++ b/app/views/admin/services/edit.html.erb
@@ -7,6 +7,12 @@
     <%= f.label :description %>
     <%= f.text_area :description %>
   </div>
+  <div class="field">
+    <%= f.label :image %><br />
+    <%= f.file_field :image %><br/>
+    <%= image_tag(@service.image.url, width: 80) if @service.image.url %>
+
+  </div>
   <div>
     <%= f.submit %>
   </div>
