--- a/app/views/pages/our_ethos.html.erb
+++ b/app/views/pages/our_ethos.html.erb
@@ -3,7 +3,7 @@
     <ul class="bjqs">
       <% Ethos.all.each do |ethos| %>
       <li>
-        <div class="window" style="background: url(<%= image_path 'our_ethos/ethosbg.jpg' %>)">
+        <div class="window" style="background: url(<%= image_path ethos.image.url %>)">
           <div class="inner_container">
           <div class="inner">
           <h1><%= ethos.headline %></h1>
