--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -33,17 +33,16 @@
 
 <h2><%= @project.name %></h2>
 <span id="in_more_detail">In more detail</span>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
+<%= simple_format @project.description %>
 </div>
 
 <div id="project_quotes">
   <ul>
-    <li>
-      <blockquote>‘Lorem ipsum dolor sit amet, consecteturadipiscing elit. Nulla id urna ac quamullamcorper adipiscing’</blockquote>
-      <span class="author">Joe Bloggs, BCSC</span>
+    <% @project.quotes.each do |quote| %>
+    <li class="quote">
+      <blockquote><%= simple_format "‘#{quote.body}’" %></blockquote>
+      <span class="author"><%= quote.author %>, <%= quote.organisation %></span>
     </li>
+    <% end %>
   </ul>
 </div>
