--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -13,6 +13,14 @@ body {
   margin-bottom: 20px;
 }
 
+.field {
+  margin-bottom: 10px;
+}
+
+table {
+  margin-bottom: 2em;
+}
+
 .container {
   width: 90%;
   margin: 0 auto;
