--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -316,5 +316,6 @@ a {
 @import "fileupload/jquery.fileupload-ui";
 @import "jquery.bsmselect";
 @import "jquery.qtip";
+@import "sessions";
 
 a:active, a:selected, a:visited { border: none !important; outline: none !important; }
