--- a/app/views/admin/downloads/index.html.erb
+++ b/app/views/admin/downloads/index.html.erb
@@ -10,4 +10,5 @@
   <% end %>
   </table>
 </div>
-<%= link_to "Add Download", new_admin_download_path %>
+
+<%= link_to "Add Download", new_admin_download_path, class: 'button' %>
