--- a/app/views/admin/ethoses/index.html.erb
+++ b/app/views/admin/ethoses/index.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <h1>Ethoses</h1>
+  <h1>Our Ethos</h1>
 <table>
 <% @ethoses.each do |ethos| %>
   <tr>
@@ -9,4 +9,4 @@
 </table>
 </div>
 
-<%#= link_to "New Ethos", new_admin_ethos_path %>
+<%= link_to "New Ethos", new_admin_ethos_path, class: 'button' %>
