--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -42,7 +42,7 @@
       <fieldset class="quote">
       <div class="field">
       <%= q.label :body %>
-      <%= q.text_area :body, placeholder: "Urban Lights were great" %>
+      <%= q.text_area :body, placeholder: "Urban Lights were great", rows: 6 %>
       </div>
       <div class="field">
       <%= q.label :author %>
