--- a/app/assets/stylesheets/our_ethos.css.scss
+++ b/app/assets/stylesheets/our_ethos.css.scss
@@ -15,7 +15,8 @@ body#c-pages-a-our_ethos {
     @include grid(4);
     background: image-url('pngs/black_bg.png');
     background: rgba(0,0,0,0.4);
-    margin-top: 13%;
+    margin: 0;
+    margin-top: 12%;
     width: 70%;
   }
 
