--- a/app/views/application/_twitter.html.erb
+++ b/app/views/application/_twitter.html.erb
@@ -1,9 +1,9 @@
 <div id="twitter">
   <h5>Our latest tweet...</h5>
   <div class="tweet">
-    <div class="tweet_body">‘<%= TwitterPost.first %>‘</div>
+    <div class="tweet_body">‘<%= Tweet.first %>‘</div>
     <div id="twitter_bird"></div>
   </div>
-  <span class="tweet_time">about <%= time_ago_in_words TwitterPost.first.posted_at %> ago</span>
+  <span class="tweet_time">about <%= time_ago_in_words(Tweet.first.posted_at) if Tweet.first %> ago</span>
   <span><%= link_to "Follow us on Twitter", 'http://twitter.com/bitsushi' %></span>
 </div>
