--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -14,11 +14,11 @@
     <div class="container">
 
   <ul id="navigation">
+    <li><%= link_to "Frontpage", admin_frontpage_index_path %></li>
     <li><%= link_to "Projects", admin_projects_path %></li>
     <li><%= link_to "Services", admin_services_path %></li>
     <li><%= link_to "Downloads", admin_downloads_path %></li>
     <li><%= link_to "Our Ethos", admin_ethoses_path %></li>
-    <li><%= link_to "Activity", admin_posts_path %></li>
     <%#= link_to "Contact", admin_projects_path %>
     <li><%= link_to("Preview Site", root_path) %></li>
 
