--- a/app/assets/stylesheets/our_ethos.css.scss
+++ b/app/assets/stylesheets/our_ethos.css.scss
@@ -11,7 +11,7 @@ body#c-pages-a-our_ethos {
 
   .inner {
     display:table;
-    padding: 10px;
+    padding: 10px 10px 10px 20px;
     @include grid(4);
     background: image-url('pngs/black_bg.png');
     background: rgba(0,0,0,0.4);
