--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Urban Lites</title>
+  <title><%= @content_for_title ? "#{@content_for_title}, Urban Lites" : "Urban Lites" %></title>
   <meta name="description" content="">
 <!--  <meta name="viewport" content="width=device-width">-->
   <meta name="viewport" content="width=940">
