--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,3 +1,4 @@
+<% title "Services" %>
 <ul id="services">
 <% @services.each do |service| %>
   <li style="background-image: url(<%= service.image.url if service.image.present? %>)">
