--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -1,3 +1,4 @@
+@import "jquery.Jcrop.css";
 @import 'bourbon';
 a {
   text-decoration: none;
@@ -17,6 +18,21 @@ table {
   margin: 20px 0;
   td {
     padding: 4px;
+  }
+}
+
+#photos li {
+  border: 2px solid white;
+}
+#photos li:first-child {
+  border: 2px solid yellow;
+}
+
+ul.sortable {
+  &, li {
+    float: left;
+    list-style: none;
+    margin: 5px;
   }
 }
 
@@ -173,4 +189,7 @@ h1,h2,h3 {
 
 .button, input[type='submit'] {
   @include button;
+  &.delete {
+    @include button(red);
+  }
 }
