--- a/app/views/admin/projects/index.html.erb
+++ b/app/views/admin/projects/index.html.erb
@@ -9,6 +9,7 @@
         <th>Name</th>
         <th>Updated at</th>
         <th># Quotes</th>
+        <th># Photos</th>
         <th></th>
       </tr>
     </thead>
@@ -17,6 +18,7 @@
       <td><%= link_to project, edit_admin_project_path(project) %></td>
       <td><%= l(project.updated_at, format: :short) %></td>
       <td><%= project.quotes.size %></td>
+      <td><%= project.photos.size %></td>
       <td><%= link_to "Delete", admin_project_path(project), method: :delete, confirm: "Are you sure?" %></td>
     </tr>
   <% end %>
