--- a/app/assets/stylesheets/our_ethos.css.scss
+++ b/app/assets/stylesheets/our_ethos.css.scss
@@ -16,8 +16,8 @@ body#c-pages-a-our_ethos {
     background: image-url('pngs/black_bg.png');
     background: rgba(0,0,0,0.4);
     margin: 0;
-    margin-top: 12%;
-    width: 70%;
+    margin-top: 110px;
+    width: 600px;
   }
 
   .inner_container {
