--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -1,4 +1,8 @@
 <% title "Activity" %>
+
+<div id="player"></div>
+
+<!--
 <ul id="social_columns">
   <li class="twitter">
     <h2>Twitter</h2>
@@ -29,3 +33,4 @@
 
   <li class="flickr"></li>
 </ul>
+-->
