--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,8 @@
     }
   </style>
   <![endif]-->
-  <%= javascript_include_tag "modernizr" %>
-  <%= javascript_include_tag("//maps.googleapis.com/maps/api/js?sensor=false") if action_name == "contact" %>
+  <%#= javascript_include_tag "modernizr" %>
+  <%#= javascript_include_tag("//maps.googleapis.com/maps/api/js?sensor=false") if action_name == "contact" %>
   <%= csrf_meta_tags %>
 </head>
 <body id="c-<%= controller_name %>-a-<%= action_name %>">
@@ -72,7 +72,7 @@
       <div id="social_buttons">
       <ul>
         <li class="twitter"><%= link_to "Twitter", 'http://twitter.com/urbanlites', title: 'Twitter' %></li>
-        <li class="facebook"><%= link_to "Facebook", 'http://facebook.com/urbanlites', title: 'Facebook' %></li>
+        <li class="facebook"><%= link_to "Facebook", 'https://www.facebook.com/pages/Urbanlites/187072201335959', title: 'Facebook' %></li>
         <li class="youtube"><%= link_to "YouTube", 'http://youtube.com/urbanlites', title: 'YouTube' %></li>
         <li class="flickr"><%= link_to "Flickr", 'http://flickr.com/urbanlites', title: 'Flickr' %></li>
       </ul>
