--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,24 @@
 <% title "Urban Lites, Manchester Based Event Lighting Company" %>
+
+
+<div id="sushislider">
+  <a id="previous" href="#">Previous</a>
+  <a id="next" href="#">Next</a>
+  <div class="wrapper">
+    <div id="player_container"><div id="player"></div></div>
+
+    <!--<iframe id="player" type="text/html" src="http://www.youtube.com/embed/u1zgFlCw8Aw?enablejsapi=1&origin=http://urbanlites.dev/" frameborder="0">-->
+     <!-- <div id="player"></div> -->
+    <ul>
+      <% @projects.each do |project| %>
+        <li class="item" style="background-image: url(<%= project.frontpage_image %>)"></li>
+      <% end %>
+      <li class="item" data-youtube-id="5WWrQ9Rgk_4"></li>
+    </ul>
+  </div>
+</div>
+
+
 <div id="window_container">
 <div id="my-slideshow">
 <ul class="bjqs">
@@ -6,7 +26,7 @@
   <li data-url="<%= project_path(project) %>">
   <div class="window" style="background-image: url(<%= project.frontpage_image %>)">
     <h1><%= link_to project.name, project %></h1>
-    <h2>Management Event 2012</h2>
+    <!--<h2>Management Event 2012</h2>-->
     <div class="description">
 
       <div class="inner">
