--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -14,6 +14,8 @@
 <div id="window_container">
   <div id="my-slideshow">
     <ul class="bjqs">
+      <div id="player"></div>
+
       <% @project.photos.each do |photo| %>
       <li>
         <div class="window" style="background-image: url(<%= photo.image_url(:window) %>)">
